@@ -81,7 +81,6 @@ PlatformMouseEventBuilder::PlatformMouseEventBuilder(Widget* widget, const WebMo
     default:
         ASSERT_NOT_REACHED();
     }
-    return TouchStart;
 }
 
 // PlatformWheelEventBuilder --------------------------------------------------
@@ -155,7 +154,6 @@ void PlatformKeyboardEventBuilder::setKeyType(Type type)
         m_keyIdentifier = String();
         m_windowsVirtualKeyCode = 0;
     }
-    return PlatformTouchPoint::TouchReleased;
 }
 
 // Please refer to bug http://b/issue?id=961192, which talks about Webkit
@@ -186,7 +184,7 @@ static inline TouchEventType toPlatformTouchEventType(const WebInputEvent::Type 
     default:
         ASSERT_NOT_REACHED();
     }
-    return WebInputEvent::Undefined;
+    return TouchStart;
 }
 
 static inline PlatformTouchPoint::State toPlatformTouchPointState(const WebTouchPoint::State state)
@@ -205,7 +203,7 @@ static inline PlatformTouchPoint::State toPlatformTouchPointState(const WebTouch
     case WebTouchPoint::StateUndefined:
         ASSERT_NOT_REACHED();
     }
-    return WebTouchPoint::StateUndefined;
+    return PlatformTouchPoint::TouchReleased;
 }
 
 PlatformTouchPointBuilder::PlatformTouchPointBuilder(Widget* widget, const WebTouchPoint& point)
